deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa-devops-microservice

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-devops-microservice
  namespace: qa-devops-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qa-devops-microservice
  template:
    metadata:
      labels:
        app: qa-devops-microservice
    spec:
      containers:
      - name: qa-devops-microservice
        image: kfcregistry.azurecr.io/qa-devops-microservice:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "1"
          requests:
            memory: "256Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: qa-devops-microservice
  namespace: qa-devops-microservice
spec:
  selector:
    app: qa-devops-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
