ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-microservice-ingress
  namespace: devops-microservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops.example.com  # El dominio que usarás para acceder a tu aplicación
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-microservice
            port:
              number: 80
